eve commit auth work

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.0
   flutter_riverpod: ^2.4.5
+  url_launcher: ^6.2.1
+  permission_handler: ^11.0.1
+  local_auth: ^2.1.7
 
 dev_dependencies:
   flutter_test:
