--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: my_app
+name: api_prov_try
 description: A new Flutter project.
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -35,11 +35,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  provider: ^6.0.5
   http: ^1.1.0
-  flutter_riverpod: ^2.4.5
+  flutter_spinkit: ^5.2.0
   url_launcher: ^6.2.1
   permission_handler: ^11.0.1
+  flutter_web_browser: ^0.17.1
   local_auth: ^2.1.7
+  google_fonts: ^6.1.0
+  expandable: ^5.0.1
+  readmore: ^2.2.0
+  internet_connection_checker: ^1.0.0+1
+
 
 dev_dependencies:
   flutter_test:
